add singflying banner in sidebar
change post grid

change post grid

change post grid

add singflying banner in sidebar

--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,12 @@ defaults:
       title: liupeng
 
 description: Liupeng's Blog
+
+singflying:
+  url: http://www.singflying.com
+  name: singflying
+  image: /assets/images/singflying.jpg
+
 author:
   name: liupeng
   email: dp90219@gmail.com
